chore: add java 8 support